--- a/VueMeal-Project/index.html
+++ b/VueMeal-Project/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body class="h-[100vh] bg-gray-100">
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Welcome to tasty meals website! Find your favorite meals, it's ingredients and instructions" />
+  <title>Tasty Meals</title>
+</head>
+<body class="h-[100vh] bg-gray-100">
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
 </html>
