--- a/GitHub-app/index.html
+++ b/GitHub-app/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Vuetify 3</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" description="An app for checking out Github users and their repositories"/>
+  <title>Altschool App</title>
 </head>
 
 <body>
